Added reset stylesheet and finalised webpage

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,25 @@
-h1 {
-    font-weight: 900;
-    font-size: 36px;
-    
-    }
-    
-h2 {
-    font-weight: 700;
-    font-size: 32px;
-    margin: 5px;
 
-}
 
 
 h1, h2 {
-    font-family: helvetica, sans-serif;
+    font-family: "lobster two", cursive, serif;
     text-align: center;
+    font-size: 48px;
+}
+
+h1 {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #FFDAC1;
+     
+}
+
+p {
+    font-family: "lobster two", cursive, serif;
+    font-weight: normal;
+    margin-left: 50px;
+    line-height: 1.5;
 }
 
 body {
@@ -26,7 +31,7 @@ body {
     height: 400px;
     border: solid 1px gray;
     border-radius: 15px;
-    margin: 50px auto;
+    margin: 75px auto;
     background-color: white;
     
 }
@@ -67,19 +72,26 @@ font-family: monospace;
 
 
 .fonts {
-    font-size: 36px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: normal;
     margin-left: 50px;
 }
 
 
 #zenLoop {
-    font-family: "Zen Loop", cursive;
+    font-family: "zen loop", cursive, serif;
+    
 } 
 
 #fuggles {
-    font-family: fuggles, cursive;
+    font-family: fuggles, cursive, serif;
+    
     }
+
+#lobsterTwo {
+    font-family: "lobster two", cursive, serif;
+    
+}
 
 .underline {
     text-decoration: underline;
@@ -89,3 +101,16 @@ font-family: monospace;
     font-style: italic;
 }
 
+ul {
+    margin-left: 50px;
+}
+
+li {
+    list-style-type: circle;
+    font-family: "lobster two", cursive, serif;
+}
+
+#quote {
+    font-family: fuggles, cursive, serif;
+    font-size: 60px;
+}
